Fix margin left on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ input::placeholder {
     position: absolute;
     width: 360px;
     height: 164px;
-    left: 30px;
+    left: 10px;
     top: 95px;
     
     color: #000000;
